<resources>
    <string name="app_name">Zgadnij cyfrę</string>
    <string name="titleOfGame">Zgadnij\nliczbę</string>
    <string name="rozpocznij">Zagraj</string>
    <string name="zamknij">Zamknij</string>
    <string name="wartosc"><![CDATA[0 < x < 100]]></string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="c">C</string>
    <string name="_0">0</string>
    <string name="exe">exe</string>
    <string name="cos123"><![CDATA[<]]></string>
    <string name="x">x</string>
    <string name="_100">100</string>
    <string name="win">Wygrałeś\nZgadywana liczba:</string>
    <string name="again">Zagraj jeszcze raz</string>
    <string name="exit">Wyjdź</string>
    <string name="error">Błędy:</string>
</resources>