<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/main"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/tvWpisywanaCyfra"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:textSize="50sp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="25dp"
        android:layout_marginHorizontal="25dp"
        android:gravity="center"
        android:background="@drawable/zaokraglenie"
        android:fontFamily="@font/crimson_text_regular"
        android:textColor="@color/black"
        tools:text="cos"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:columnCount="3">

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            android:backgroundTint="@color/btn"
            android:fontFamily="@font/crimson_text_semibold"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_margin="10dp"/>
        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2"
            android:backgroundTint="@color/btn"
            android:fontFamily="@font/crimson_text_semibold"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_margin="10dp"/>
        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3"
            android:backgroundTint="@color/btn"
            android:fontFamily="@font/crimson_text_semibold"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_margin="10dp"/>
        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4"
            android:backgroundTint="@color/btn"
            android:fontFamily="@font/crimson_text_semibold"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_margin="10dp"/>
        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5"
            android:backgroundTint="@color/btn"
            android:fontFamily="@font/crimson_text_semibold"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_margin="10dp"/>
        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_6"
            android:backgroundTint="@color/btn"
            android:fontFamily="@font/crimson_text_semibold"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_margin="10dp"/>
        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7"
            android:backgroundTint="@color/btn"
            android:fontFamily="@font/crimson_text_semibold"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_margin="10dp"/>
        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_8"
            android:backgroundTint="@color/btn"
            android:fontFamily="@font/crimson_text_semibold"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_margin="10dp"/>
        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_9"
            android:backgroundTint="@color/btn"
            android:fontFamily="@font/crimson_text_semibold"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_margin="10dp"/>
        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c"
            android:backgroundTint="@color/btn"
            android:fontFamily="@font/crimson_text_semibold"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_margin="10dp"/>
        <Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:backgroundTint="@color/btn"
            android:fontFamily="@font/crimson_text_semibold"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_margin="10dp"/>
        <Button
            android:id="@+id/btnExe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exe"
            android:backgroundTint="@color/btn"
            android:fontFamily="@font/crimson_text_semibold"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_margin="10dp"/>

    </GridLayout>

    <LinearLayout
        android:background="@drawable/zaokraglenie"
        android:orientation="horizontal"
        android:textColor="@color/black"
        android:layout_margin="25dp"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="0dp"
        android:layout_weight="0.5">

        <TextView
            android:id="@+id/tvZero"
            android:fontFamily="@font/crimson_text_regular"
            android:text=""
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/crimson_text_regular"
            android:text="@string/cos123"
            android:gravity="center"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tvX"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/crimson_text_regular"
            android:text="@string/x"
            android:gravity="center"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/crimson_text_regular"
            android:text="@string/cos123"
            android:gravity="center"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tvSto"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/crimson_text_regular"
            android:text=""
            android:gravity="center"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textSize="30sp" />

    </LinearLayout>




</LinearLayout>