<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="382dp"
        android:layout_height="114dp"
        android:background="@drawable/zaokraglenie"
        android:fontFamily="@font/crimson_text_bold"
        android:gravity="center"
        android:text="@string/titleOfGame"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/btnStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="202dp"
        android:layout_height="91dp"
        android:backgroundTint="@color/btn"
        android:fontFamily="@font/crimson_text_bold"
        android:text="@string/rozpocznij"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btnEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/btnEnd"
        android:layout_width="183dp"
        android:layout_height="91dp"
        android:backgroundTint="@color/btn"
        android:fontFamily="@font/crimson_text_bold"
        android:text="@string/zamknij"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStart" />

</androidx.constraintlayout.widget.ConstraintLayout>