<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/main"
    tools:context=".FinishActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/zaokraglenie">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:text="@string/win"
            android:textSize="50sp"
            android:paddingBottom="0dp"
            android:layout_marginBottom="0dp"
            android:gravity="center|bottom"
            android:fontFamily="@font/crimson_text_regular"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvWynik"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="50sp"
            android:gravity="center|top"
            android:layout_marginTop="0dp"
            android:paddingTop="0dp"
            tools:text="0"
            android:fontFamily="@font/crimson_text_regular"
            android:textColor="@color/black"
            android:layout_weight="0.5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:textSize="50sp"
            android:gravity="center|top"
            android:layout_marginTop="0dp"
            android:paddingTop="0dp"
            android:text="@string/error"
            android:fontFamily="@font/crimson_text_regular"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvBledy"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:textSize="50sp"
            android:gravity="center|top"
            android:layout_marginTop="0dp"
            android:paddingTop="0dp"
            tools:text="0"
            android:fontFamily="@font/crimson_text_regular"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/btnStartAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/again"
            android:backgroundTint="@color/btn"
            android:fontFamily="@font/crimson_text_semibold"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:backgroundTint="@color/btn"
            android:fontFamily="@font/crimson_text_semibold"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="30sp" />

    </LinearLayout>

</LinearLayout>